--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -63,9 +63,9 @@ set(INSTALL_INC include CACHE PATH "Where to install headers to.")
 # Build options
 option(BUILD_TESTS "Build Tests" ON)
 
-# Build Release by default
+# Build RelWithDebInfo by default
 if(NOT CMAKE_BUILD_TYPE)
-    set(CMAKE_BUILD_TYPE "Release" CACHE STRING "Choose the type of build, options are: Debug Release RelWithDebInfo MinSizeRel." FORCE)
+    set(CMAKE_BUILD_TYPE "RelWithDebInfo" CACHE STRING "Choose the type of build, options are: Debug Release RelWithDebInfo MinSizeRel." FORCE)
 endif()
 
 set(LIBGIT2_SRC_DIR "" CACHE PATH "Build libgit2 source from this directory.")
