--- a/CMakeSettings.json
+++ b/CMakeSettings.json
@@ -13,12 +13,12 @@
       "variables": [
         {
           "name": "Qt5_DIR",
-          "value": "C:\\Qt\\5.12.6\\msvc2017_64",
+          "value": "C:\\Qt\\5.15.0\\msvc2019_64",
           "type": "PATH"
         },
         {
           "name": "LIBGIT2_SRC_DIR",
-          "value": ".\\..\\libgit2",
+          "value": "D:\\temp\\eat3-mes_automaticupdaterWithLib\\libgit2",
           "type": "PATH"
         }
       ]
@@ -36,12 +36,12 @@
       "variables": [
         {
           "name": "Qt5_DIR",
-          "value": "C:\\Qt\\5.12.6\\msvc2017_64",
+          "value": "C:\\Qt\\5.15.0\\msvc2019_64",
           "type": "PATH"
         },
         {
           "name": "LIBGIT2_SRC_DIR",
-          "value": ".\\..\\libgit2",
+          "value": "D:\\temp\\eat3-mes_automaticupdaterWithLib\\libgit2",
           "type": "PATH"
         }
       ]
